# miggy_brute_force

./: Cargo.toml  LICENCE.md  README.md
.github/workflows/: release.yml  rust.yml  rust_build.yml  rust_test.yml
src/: main.rs
