[package]
name = "miggy_brute_force"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
colored = "2.0.0"
termsize = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.12.1"